ndim-utils 0.5.x
  * Migrate to newer build-helpers/
  * Fixed and updated RPM generation

ndim-utils 0.5
  * percheck: add POSIX ACL support (--acl option)

ndim-utils 0.4.3
  * New versioning scheme using git tags.
  * Add strace-normalize script.

ndim-utils 0.2.4
  * Fix RPM creation.

ndim-utils 0.2.3
  * Add built-in RPM support.
  * Add SELinux support to percheck.
  * Avoid downloading whoislist.gz if possible.

ndim-utils 0.2.2
  * Add list-debuginfo-rpms script.

ndim-utils 0.2.1
  First release with NEWS.